# linkedin-mutual-connections

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  airtable_sync_spec.md  com.frontier.linkedin-worker.plist  company_people.py  contact_info.py  mutual_connections.py  pyproject.toml  save_cookies.py  setup.sh  setup_pubsub.sh  setup_vm.sh  worker.py
.github/workflows/: mirror.yml
api/: config.py  main.py  models.py  pubsub.py  slack.py  store.py  worker.py
